--- a/packages/theme-default/lib/show-more.css
+++ b/packages/theme-default/lib/show-more.css
@@ -1,1 +1,1 @@
-:root{border:1px solid #d1dbe5}.w__show-more{font-size:13px;color:#000}.w__show-more--href,.w__show-more--link{color:#3faaf5;cursor:pointer}.w__show-more--link{text-decoration:none}
+:root{border:1px solid #d1dbe5}.w-show-more{font-size:13px;color:#000}.w-show-more--href,.w-show-more--link{color:#3faaf5;cursor:pointer}.w-show-more--link{text-decoration:none}
