--- a/examples/assets/less/common.less
+++ b/examples/assets/less/common.less
@@ -66,3 +66,23 @@ code, kbd, pre, samp {
 .fs-24 {
   font-size: 24px;
 }
+//禁止点击
+.disabled{
+  cursor: not-allowed;
+}
+//字体图标
+@font-face {
+  font-family: 'iconfont';  /* project id 336414 */
+  src: url('//at.alicdn.com/t/font_336414_dznwbofok98jjor.eot');
+  src: url('//at.alicdn.com/t/font_336414_dznwbofok98jjor.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_336414_dznwbofok98jjor.woff') format('woff'),
+  url('//at.alicdn.com/t/font_336414_dznwbofok98jjor.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_336414_dznwbofok98jjor.svg#iconfont') format('svg');
+}
+.iconfont{
+    font-family:"iconfont" !important;
+    font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+}
