--- a/packages/theme-default/src/common/variable.scss
+++ b/packages/theme-default/src/common/variable.scss
@@ -10,20 +10,33 @@
     $fs-small-s: 10px;
 
 // 颜色定义规范
+    //主要(浅蓝),帮助, 
     $color-primary: #1E88F5;
+    //红
     $color-assist: #E93A0E;
+    //浅灰
     $color-assist-1: #EEF1F6;
+    //橙色
     $color-assist-2: #F8800A;
+    //更浅的灰色
     $color-assist-3: #F5F5F5;
+    //更更浅的灰色
     $color-assist-4: #F8F8F8;
-
+    //错误(绿色),警告,一般提示信息、成功
+    $color-success: #13ce66;
+    //橘色
+    $color-warning: #f7ba2a;
+    //浅红
+    $color-danger: #ff4949;
+    //浅蓝
+    $color-info: #50bfff;
+//边框色
     $color-border: #E0E5EE;
     $color-border-1: #D5D5D5;
     $color-border-2: #CCCCCC;
 
     $color-white: #FFF;
     $color-black: #000;
-
     // d表示更深，s表示更浅;
     // $color-3-d: #000;
     $color-3: #333;
@@ -33,10 +46,9 @@
 
     // 模态层背景色
     $color-mask: rgba(0,0,0,0.6);
-
-    // 错误、警告、一般提示信息、成功
-
-// 边距
+    
+    
+    // 边距
     $edge-popup: 15px;
     $edge-x: 15px;
     $edge: 10px;
