--- a/packages/theme-default/src/shade.scss
+++ b/packages/theme-default/src/shade.scss
@@ -1,9 +1,12 @@
 @import "./common/var.scss";
 @import "./common/mixin.scss";
-@b x{
-	@e shade{
-	    display: none;
-		@include position($fn:fixed,$top: 0, $right: 0, $bottom: 0, $left: 0);
-		background-color: rgba(0,0,0,0.6);
-	}
+.x-shade{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    overflow: auto;
+    display: block;
 }
