--- a/packages/theme-default/src/alert.scss
+++ b/packages/theme-default/src/alert.scss
@@ -1,7 +1,7 @@
 @import "./common/var.scss";
 @import "./common/mixin.scss";
 
-@b w-alert {
+.x-alert {
   padding: var(--alert-padding);
   border-radius: var(--border-radius-base);
   position: relative;
@@ -10,63 +10,63 @@
   display: flex;
   align-items: center;
 
-  @when center {
+  &.is-center {
     justify-content: center;
   }
 
-  @m success {
+  &.x-alert-success {
     color: var(--color-success) color(var(--color-success) a(0.1));
   }
-  @m warning {
+  &.x-alert-warning {
     color: var(--color-warning) color(var(--color-warning) a(0.1));
   }
-  @m info {
+  &.x-alert-info {
     color: var(--color-info) color(var(--color-info) a(0.1));
   }
-  @m error {
+  &.x-alert-error {
     color: var(--color-danger) color(var(--color-danger) a(0.1));
   }
 
-  @e icon {
+  .x-alert-icon {
     font-size: var(--alert-icon-size);
     width: var(--alert-icon-size);
-    @when big {
+    .x-alert-big {
       font-size: var(--alert-icon-large-size);
       width: var(--alert-icon-large-size);
     }
   }
-  @e content {
+  .x-alert-content {
     padding: 0 8px;
   }
 
-  @e title {
+  .x-alert-title {
     font-size: var(--alert-title-font-size);
     line-height: 18px;
-    @when bold {
+    .x-alert-bold {
       font-weight: bold;
     }
   }
 
-  @e closebtn {
+  .x-alert-closebtn {
     font-size: var(--alert-close-font-size);
     color: var(--color-close);
     position: absolute 12px 15px 0 0;
     cursor: pointer;
-    @when customed {
+    .x-alert-customed {
       font-style: normal;
       font-size: var(--alert-title-font-size);
       top: 9px;
     }
   }
 
-  @e description {
+  .x-alert-description {
     font-size: var(--alert-title-font-size);
     margin: 5px 0 0;
     color: inherit;
   }
 }
 
-.w-alert-fade-enter,
-.w-alert-fade-leave-active {
+.x-alert-fade-enter,
+.x-alert-fade-leave-active {
   opacity: 0;
 }
