--- a/packages/theme-default/src/common/variable.scss
+++ b/packages/theme-default/src/common/variable.scss
@@ -12,40 +12,57 @@
     // 颜色定义规范
     //红
     $color-danger: #ff6666;
-    //
+    $color-danger-hyaline: rgba(255,102,102,0.4);
+    //更深红
     $color-danger1: #ff3333;
+    $color-danger1-hyaline: rgba(255,51,51,0.4);
     //更深红
     $color-danger2: #ff0000;
-    
+    $color-danger2-hyaline: rgba(255,0,0,0.4);
     //蓝, 
     $color-primary: #1E88F5;
+    $color-primary-hyaline: rgba(30,136,245,0.4);
     //浅蓝
     $color-primary1: #50bfff;
+    $color-primary1-hyaline: rgba(80,191,255,0.4);
     //深蓝
     $color-primary2: #0066ff;
+    $color-primary2-hyaline: rgba(0,102,255,0.4);
     
     //浅灰
     $color-gray: #EEF1F6;
+    $color-gray-hyaline: rgba(238,241,246,0.4);
     //更浅的灰色
     $color-gray1: #F5F5F5;
+    $color-gray1-hyaline: rgba(245,245,245,0.4);
     //更更浅的灰色
     $color-gray2: #F8F8F8;
+    $color-gray2-hyaline: rgba(248,248,248,0.4);
     
     //橙色
     $color-warning1: #F8800A;
+    $color-warning1-hyaline: rgba(248,128,10,0.4);
     //更浅的橙色
     $color-warning: #f7ba2a;
+    $color-warning-hyaline: rgba(247,186,42,0.4);
     
+    //浅绿色
+    $color-success2:#98FB98;
+    $color-success2-hyaline: rgba(152,251,152,0.4);
     //绿色
     $color-success: #33cc33;
+    $color-success-hyaline: rgba(51,204,51,0.4);
     //更深的绿色
     $color-success1: #339933;
+    $color-success1-hyaline: rgba(51,153,51,0.4);
     
-//边框色
+    //边框色(灰色)
     $color-border: #E0E5EE;
     $color-border-1: #D5D5D5;
     $color-border-2: #CCCCCC;
-
+    //
+    $color-border-focus: #E0E5EE;
+    
     $color-white: #FFF;
     $color-black: #000;
     // d表示更深，s表示更浅;
