--- a/packages/theme-default/src/loading-bar.scss
+++ b/packages/theme-default/src/loading-bar.scss
@@ -1,8 +1,7 @@
 @import "./common/var.scss";
 @import "./common/mixin.scss";
-@b w {
-  @e loading-bar {
-    @m bar {
+  .x-loading-bar{
+    .x-loading-bar-bar {
       position: fixed;
       top: 0;
       left: 0;
@@ -13,10 +12,10 @@
       transform: translate3d(-100%, 0, 0);
       background: var(--color-primary);
     }
-    @m error {
+    .x-loading-bar-error {
       background: var(--color-danger)
     }
-    @m peg {
+    .x-loading-bar-peg {
       display: block;
       position: absolute;
       right: 0;
@@ -26,7 +25,7 @@
       opacity: 1.0;
       transform: rotate(3deg) translate(0px,-4px);
     }
-    @m spinner {
+    .x-loading-bar-spinner {
       display: block;
       position: fixed;
       z-index: 1031;
@@ -47,4 +46,3 @@
       }
     }
   }
-}
