--- a/packages/theme-default/src/show-more.scss
+++ b/packages/theme-default/src/show-more.scss
@@ -1,18 +1,7 @@
 @import "./common/var.scss";
 @import "./common/mixin.scss";
 
-@b w {
-  @e show-more {
-    font-size: 13px;
-    color: var(--color-black);
-    @m link {
-      color: var(--color-primary);
-      cursor: pointer;
-      text-decoration: none;
-    }
-    @m href {
-      color: var(--color-primary);
-      cursor: pointer;
-    }
-  }
+.x-show-more {
+    font-size: $fs-normal;
+    color: $color-3;
 }
