--- a/packages/theme-default/src/tag.scss
+++ b/packages/theme-default/src/tag.scss
@@ -1,68 +1,71 @@
 @import "./common/var.scss";
+@import "./common/variable.scss";
 @import "./common/mixin.scss";
-@b w {
-  @e tag {
+.x-tag{
     display: inline-block;
     padding: 1px 8px;
     font-size: 0;
     line-height: 1.5;
     text-align: center;
     white-space: nowrap;
-    border: 1px solid #dfdfdf;
+    border: 1px solid $color-gray;
     border-radius: 4px;
     outline: 0;
-    color: #3f536e;
-    background-color: #f7f7f7;
-    @m desc {
-      font-size: 12px;
-      margin-right: 2px;
+    color: $color-3;
+    background-color: $color-gray-hyaline; 
+    transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+    .x-tag-desc{
+        font-size: 12px;
+        margin-right: 2px;
     }
-    @m default{
-      color: #3f536e;
-      border-color: #dfdfdf;
-      background-color: #f7f7f7;
+    &.x-tag-default{
+        color: #3f536e;
+        border-color: $color-gray;
+        background-color: $color-gray-hyaline;
     }
-    @m success{
-      background-color: var(--tag-success-fill);
-      border-color: var(--tag-success-border);
-      color: var(--tag-success-color);
-
-      & .el-tag__close:hover {
+    &.x-tag-info{
+        border-color: $color-border;
+    }
+    &.x-tag-success{
+      background-color: $color-success2-hyaline;
+      border-color: $color-success2;
+      color: $color-success;
+      &:hover {
         background-color: var(--tag-success-color);
         color: var(--color-white);
       }
     }
-    @m primary {
+    &.x-tag-primary {
       background-color: var(--tag-primary-fill);
       border-color: var(--tag-primary-border);
       color: var(--tag-primary-color);
-      & .el-tag__close:hover {
+      &:hover {
         background-color: var(--tag-primary-color);
         color: var(--color-white);
       }
     }
-    @m warning {
+    &.x-tag-warning {
       background-color: var(--tag-warning-fill);
       border-color: var(--tag-warning-border);
       color: var(--tag-warning-color);
 
-      &.el-tag__close:hover {
+      &:hover {
         background-color: var(--tag-warning-color);
         color: var(--color-white);
       }
     }
-    @m danger {
+     &.x-tag-danger {
       background-color: var(--tag-danger-fill);
       border-color: var(--tag-danger-border);
       color: var(--tag-danger-color);
 
-      & .el-tag__close:hover {
+      &:hover {
         background-color: var(--tag-danger-color);
         color: var(--color-white);
       }
     }
-    @m close {
+    & .x-tag-close {
       font-size: 12px;
     }
-  }
 }
+
