--- a/packages/theme-default/src/transiton.scss
+++ b/packages/theme-default/src/transiton.scss
@@ -1,19 +1,24 @@
-.w-zoom-in-center-enter-active,
-.w-zoom-in-center-leave-active {
+.x-zoom-in-center-enter-active,
+.x-zoom-in-center-leave-active {
   transition: all .3s cubic-bezier(.55,0,.1,1);
 }
-.w-zoom-in-center-enter,
-.w-zoom-in-center-leave-active {
+.x-zoom-in-center-enter,
+.x-zoom-in-center-leave-active {
   opacity: 0;
   transform: scaleX(0);
 }
-
-@keyframes w-spinner {
+.x-fade-enter-active, .x-fade-leave-active {
+  transition: opacity .5s;
+}
+.x-fade-enter, .x-fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
+@keyframes x-spinner {
   0%   { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
 
-@keyframes w-opacity
+@keyframes x-opacity
 {
   0%   {opacity: 1;}
   10%   {opacity: 0.9;}
