--- a/examples/assets/scss/common.scss
+++ b/examples/assets/scss/common.scss
@@ -2,6 +2,10 @@ article, aside, blockquote, body, button, code, dd, details, div, dl, dt, fields
   margin: 0;
   padding: 0;
 }
+*{
+    box-sizing: border-box;
+}
+html,body{width: 100%;height: 100%;}
 a {
   text-decoration: none;
 }
